--- a/website/index.html
+++ b/website/index.html
@@ -19,6 +19,11 @@
       user-select: none;
     }
 
+    body.no-scroll {
+      overflow: hidden;
+      height: 100vh;
+    }
+
     header {
       position: fixed;
       top: 0;
@@ -163,6 +168,8 @@
       padding: 80px 20px;
       transition: left 0.4s ease-in-out;
       z-index: 1100;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
 
     .sidebar.open {
@@ -282,6 +289,7 @@
   menuToggle.addEventListener('click', () => {
     const open = menuToggle.classList.toggle('open');
     sidebar.classList.toggle('open', open);
+    document.body.classList.toggle('no-scroll', open);
   });
 
   logoContainer.addEventListener('click', () => {
