--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
@@ -17,12 +17,6 @@
       background-color: white;
       font-family: Arial, sans-serif;
       user-select: none;
-    }
-
-    body.no-scroll {
-      position: fixed;
-      overflow: hidden;
-      width: 100%;
     }
 
     header {
@@ -85,26 +79,17 @@
       cursor: pointer;
     }
 
-    .logo-text {
-      font-family: 'Cardo', serif;
-      font-size: 75px;
-      font-weight: bold;
-      line-height: 1;
-      height: 75px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      white-space: nowrap;
-      transition: opacity 0.3s ease;
-    }
-
-    .logo-image {
+    .logo {
       height: 36px;
-      display: none;
       transition: opacity 0.3s ease, height 0.3s ease;
+      display: block;
     }
 
-    .logo-image.scrolled {
+    .logo.alt {
+      display: none;
+    }
+
+    .logo.alt.scrolled {
       height: 75px;
     }
 
@@ -178,8 +163,6 @@
       padding: 80px 20px;
       transition: left 0.4s ease-in-out;
       z-index: 1100;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
     }
 
     .sidebar.open {
@@ -220,14 +203,15 @@
   </style>
 </head>
 <body>
+
 <header>
   <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
     <div></div><div></div><div></div>
   </div>
 
   <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
-    <span class="logo-text" id="logoText">MATT SCIANNA</span>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo-image" id="logoImage" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo alt" id="logoImage" />
   </div>
 
   <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
@@ -245,6 +229,7 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
+<!-- RED JERSEY LINKED -->
 <a href="/twofive/red" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
@@ -253,6 +238,7 @@
   <div class="product-price">$50.00</div>
 </div>
 
+<!-- WHITE JERSEY UNLINKED FOR NOW -->
 <a href="#" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
@@ -269,9 +255,9 @@
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.getElementById('sidebar');
   const logoContainer = document.getElementById('logoContainer');
+  const slider = document.getElementById('slider');
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
-  const slider = document.getElementById('slider');
 
   let currentIndex = 0;
   const slides = slider.children;
@@ -291,22 +277,11 @@
     updateSlide(currentIndex);
   }
 
-  setInterval(nextSlide, 10000);
+  setInterval(nextSlide, 10000); // Auto slide every 10s
 
-  let scrollPosition = 0;
   menuToggle.addEventListener('click', () => {
-    const isOpen = menuToggle.classList.toggle('open');
-    sidebar.classList.toggle('open', isOpen);
-
-    if (isOpen) {
-      scrollPosition = window.pageYOffset;
-      document.body.classList.add('no-scroll');
-      document.body.style.top = `-${scrollPosition}px`;
-    } else {
-      document.body.classList.remove('no-scroll');
-      document.body.style.top = '';
-      window.scrollTo(0, scrollPosition);
-    }
+    const open = menuToggle.classList.toggle('open');
+    sidebar.classList.toggle('open', open);
   });
 
   logoContainer.addEventListener('click', () => {
@@ -336,5 +311,6 @@
     }
   });
 </script>
+
 </body>
 </html>
