--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
@@ -79,17 +79,26 @@
       cursor: pointer;
     }
 
-    .logo {
+    .logo-text {
+      font-family: 'Cardo', serif;
+      font-size: 28px;
+      font-weight: bold;
+      line-height: 1;
       height: 36px;
-      transition: opacity 0.3s ease, height 0.3s ease;
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      white-space: nowrap;
+      transition: opacity 0.3s ease;
     }
 
-    .logo.alt {
+    .logo-image {
+      height: 36px;
       display: none;
+      transition: opacity 0.3s ease, height 0.3s ease;
     }
 
-    .logo.alt.scrolled {
+    .logo-image.scrolled {
       height: 75px;
     }
 
@@ -153,7 +162,7 @@
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
+      left: 0;
       width: 100vw;
       height: 100vh;
       background: white;
@@ -161,12 +170,15 @@
       font-weight: 400;
       font-size: 24px;
       padding: 80px 20px;
-      transition: left 0.4s ease-in-out;
+      transform: translateX(-100%);
+      transition: transform 0.4s ease-in-out;
       z-index: 1100;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
 
     .sidebar.open {
-      left: 0;
+      transform: translateX(0);
     }
 
     .product-image-box {
@@ -203,15 +215,14 @@
   </style>
 </head>
 <body>
-
 <header>
   <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
     <div></div><div></div><div></div>
   </div>
 
   <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo alt" id="logoImage" />
+    <span class="logo-text" id="logoText">MATT SCIANNA</span>
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo-image" id="logoImage" />
   </div>
 
   <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
@@ -229,7 +240,6 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<!-- RED JERSEY LINKED -->
 <a href="/twofive/red" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
@@ -238,7 +248,6 @@
   <div class="product-price">$50.00</div>
 </div>
 
-<!-- WHITE JERSEY UNLINKED FOR NOW -->
 <a href="#" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
@@ -255,9 +264,9 @@
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.getElementById('sidebar');
   const logoContainer = document.getElementById('logoContainer');
-  const slider = document.getElementById('slider');
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
+  const slider = document.getElementById('slider');
 
   let currentIndex = 0;
   const slides = slider.children;
@@ -277,11 +286,24 @@
     updateSlide(currentIndex);
   }
 
-  setInterval(nextSlide, 10000); // Auto slide every 10s
+  setInterval(nextSlide, 10000);
 
+  let scrollPosition = 0;
   menuToggle.addEventListener('click', () => {
-    const open = menuToggle.classList.toggle('open');
-    sidebar.classList.toggle('open', open);
+    const isOpen = menuToggle.classList.toggle('open');
+    sidebar.classList.toggle('open', isOpen);
+
+    if (isOpen) {
+      scrollPosition = window.pageYOffset;
+      document.body.style.position = 'fixed';
+      document.body.style.top = `-${scrollPosition}px`;
+      document.body.style.width = '100%';
+    } else {
+      document.body.style.position = '';
+      document.body.style.top = '';
+      document.body.style.width = '';
+      window.scrollTo(0, scrollPosition);
+    }
   });
 
   logoContainer.addEventListener('click', () => {
@@ -311,6 +333,5 @@
     }
   });
 </script>
-
 </body>
 </html>
