--- a/website/index.html
+++ b/website/index.html
@@ -19,6 +19,12 @@
       user-select: none;
     }
 
+    body.sidebar-open {
+      overflow: hidden;
+      position: fixed;
+      width: 100%;
+    }
+
     header {
       position: fixed;
       top: 0;
@@ -72,17 +78,18 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      transform: translateX(-50%);
+      top: 50%;
+      transform: translate(-50%, -50%);
       display: flex;
       align-items: center;
-      height: 100%;
+      height: 64px;
       cursor: pointer;
     }
 
     .logo-text {
       font-family: 'Cardo', serif;
       font-size: 28px;
-      font-weight: bold;
+      font-weight: 900;
       line-height: 1;
       height: 36px;
       display: flex;
@@ -174,7 +181,9 @@
       transition: transform 0.4s ease-in-out;
       z-index: 1100;
       overflow-y: auto;
+      overflow-x: hidden;
       -webkit-overflow-scrolling: touch;
+      touch-action: auto;
     }
 
     .sidebar.open {
@@ -294,14 +303,12 @@
     sidebar.classList.toggle('open', isOpen);
 
     if (isOpen) {
-      scrollPosition = window.pageYOffset;
-      document.body.style.position = 'fixed';
+      scrollPosition = window.scrollY;
+      document.body.classList.add('sidebar-open');
       document.body.style.top = `-${scrollPosition}px`;
-      document.body.style.width = '100%';
     } else {
-      document.body.style.position = '';
+      document.body.classList.remove('sidebar-open');
       document.body.style.top = '';
-      document.body.style.width = '';
       window.scrollTo(0, scrollPosition);
     }
   });
