--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo:wght@700;900&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
@@ -88,9 +88,10 @@
 
     .logo-text {
       font-family: 'Cardo', serif;
-      font-size: 28px;
+      font-size: 30px;
       font-weight: 900;
       line-height: 1;
+      margin-top: 2px;
       height: 36px;
       display: flex;
       align-items: center;
