--- a/website/index.html
+++ b/website/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TWO-FIVE JERSEY (RED) | Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet" />
+  <title>Matt Scianna</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo:wght@700;900&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
@@ -12,18 +12,17 @@
       box-sizing: border-box;
     }
 
-    body {
-      font-family: 'Oswald', sans-serif;
-      background-color: white;
-      text-align: center;
-      color: black;
-      user-select: none;
+    html, body {
       overflow-x: hidden;
-      transition: overflow 0.3s ease;
+      background-color: white;
+      font-family: Arial, sans-serif;
+      user-select: none;
     }
 
     body.sidebar-open {
       overflow: hidden;
+      position: fixed;
+      width: 100%;
     }
 
     header {
@@ -39,6 +38,7 @@
       background-color: white;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
+      transition: background-color 0.3s ease;
     }
 
     .menu-icon {
@@ -78,20 +78,28 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      transform: translateX(-50%);
+      top: 48%;
+      transform: translate(-50%, -50%);
       display: flex;
       align-items: center;
-      height: 100%;
+      height: 64px;
       cursor: pointer;
     }
 
-    .logo {
+    .logo-text {
+      font-family: 'Cardo', serif;
+      font-size: 28px;
+      font-weight: 900;
+      line-height: 1;
       height: 36px;
-      transition: opacity 0.3s ease, height 0.3s ease;
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      white-space: nowrap;
     }
 
-    .logo.alt {
+    .logo-image {
+      height: 48px;
       display: none;
     }
 
@@ -107,10 +115,55 @@
       height: 22px;
     }
 
+    .image-box {
+      margin-top: 64px;
+      width: 100%;
+      height: 400px;
+      background: black;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .slider {
+      display: flex;
+      width: 300%;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .slide {
+      flex: 0 0 100%;
+      height: 400px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 18px;
+      height: 18px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      padding: 6px;
+      cursor: pointer;
+      z-index: 2;
+    }
+
+    .arrow.left {
+      left: 10px;
+      transform: translateY(-50%) rotate(135deg);
+    }
+
+    .arrow.right {
+      right: 10px;
+      transform: translateY(-50%) rotate(-45deg);
+    }
+
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
+      left: 0;
       width: 100vw;
       height: 100vh;
       background: white;
@@ -118,142 +171,45 @@
       font-weight: 400;
       font-size: 24px;
       padding: 80px 20px;
-      transition: left 0.4s ease-in-out;
+      transform: translateX(-100%);
+      transition: transform 0.4s ease-in-out;
       z-index: 1100;
-      text-align: left;
       overflow-y: auto;
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
+      touch-action: auto;
     }
 
     .sidebar.open {
-      left: 0;
+      transform: translateX(0);
     }
 
-    main, .product-image, .carousel-indicators, .color-label, .sizes, .sold-out-btn, h1 {
-      font-family: 'Oswald', sans-serif;
-    }
-
-    h1.product-title {
-      margin-top: 80px;
-      font-weight: 700;
-      font-size: 20px;
-      margin-bottom: 20px;
-      user-select: none;
-      border-bottom: none;
-    }
-
-    .product-image {
-      position: relative;
-      width: 100%;
-      max-width: 480px;
-      height: 480px; /* Reduced height */
-      margin: 0 auto 20px auto;
-      background-color: transparent; /* No background */
-      border-radius: 8px;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .product-image img {
-      max-width: 100%;
-      max-height: 100%;
-      display: block;
-      object-fit: contain;
-      background: transparent;
-    }
-
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 36px;
-      height: 36px;
-      cursor: pointer;
-      opacity: 0.7;
-      transition: opacity 0.2s ease;
-      fill: white;
-      user-select: none;
-    }
-
-    .arrow:hover {
-      opacity: 1;
-    }
-
-    .arrow-left { left: 8px; }
-    .arrow-right { right: 8px; }
-
-    .carousel-indicators {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 8px;
-      margin: 16px 0;
-    }
-
-    .carousel-indicators div {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background-color: #ccc;
-    }
-
-    .carousel-indicators .active {
-      background-color: black;
-    }
-
-    .color-label {
-      margin: 10px 0;
-      font-weight: 700;
-      font-size: 16px;
-      color: black;
-      user-select: none;
-    }
-
-    .sizes {
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      margin: 16px 0;
-      font-size: 16px;
-      user-select: none;
-    }
-
-    .sizes button {
-      background: transparent;
-      color: black;
-      border: none;
-      font-weight: 700;
-      font-size: 16px;
-      cursor: pointer;
-      padding: 6px 8px;
-      transition: color 0.3s ease;
-    }
-
-    .sizes button:hover {
-      color: #555;
-      text-decoration: underline;
-    }
-
-    .sold-out-btn {
-      background-color: black;
-      color: white;
-      border: none;
-      padding: 16px;
-      font-size: 16px;
+    .product-image-box {
       width: 90%;
       max-width: 400px;
-      margin: 20px auto 20px auto;
-      display: block;
+      height: 500px;
+      background-color: #f2f2f2;
+      margin: 40px auto 16px auto;
       border-radius: 6px;
       cursor: pointer;
-      user-select: none;
     }
 
-    footer {
-      padding: 20px 0;
-      font-size: 14px;
-      color: #555;
+    .product-info {
+      font-family: 'Oswald', sans-serif;
+      text-align: center;
+      padding: 0 16px;
+      margin-bottom: 32px;
+    }
+
+    .product-title {
+      font-weight: 700;
+      font-size: 22px;
+      margin-bottom: 6px;
+    }
+
+    .product-price {
+      font-weight: 400;
+      font-size: 20px;
     }
 
     @media (min-width: 768px) {
@@ -262,98 +218,119 @@
   </style>
 </head>
 <body>
-
 <header>
   <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
     <div></div><div></div><div></div>
   </div>
 
   <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MS%20LOGO%20BLACK.png?raw=true" alt="Matt Scianna Logo Icon" class="logo alt" id="logoIcon" />
+    <span class="logo-text" id="logoText">MATT SCIANNA</span>
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo-image" id="logoImage" />
   </div>
 
-  <div class="cart-icon-container" title="Cart">
-    <img src="https://cdn-icons-png.flaticon.com/512/3144/3144456.png" alt="Cart Icon" class="cart-icon" />
+  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
   </div>
 </header>
 
-<div class="sidebar" role="navigation" aria-label="Main Sidebar">
-  <p>Link 1</p>
-  <p>Link 2</p>
-  <p>Link 3</p>
-  <p>Link 4</p>
-  <p>Link 5</p>
-  <p>Link 6</p>
-  <p>Link 7</p>
-  <p>Link 8</p>
+<div class="image-box">
+  <div class="slider" id="slider">
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');"></div>
+  </div>
+  <div class="arrow left" onclick="prevSlide()"></div>
+  <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<main>
-  <h1 class="product-title">TWO-FIVE JERSEY (RED)</h1>
+<!-- RED Jersey -->
+<a href="/jersey/red" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY (RED)</div>
+  <div class="product-price">$50.00</div>
+</div>
 
-  <div class="product-image" id="productImageBox">
-    <img 
-      id="productImage" 
-      src="https://github.com/mattscianna/mattscianna/blob/main/JERSEYPNG.png?raw=true" 
-      alt="TWO-FIVE Jersey Red" 
-    />
-  </div>
+<!-- WHITE Jersey -->
+<a href="/jersey/white" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY (WHITE)</div>
+  <div class="product-price">$50.00</div>
+</div>
 
-  <div class="carousel-indicators" role="tablist" aria-label="Image carousel navigation">
-    <div class="active" role="tab" aria-selected="true" tabindex="0"></div>
-    <div role="tab" tabindex="0"></div>
-    <div role="tab" tabindex="0"></div>
-  </div>
-
-  <div class="color-label">RED</div>
-
-  <div class="sizes" role="list" aria-label="Available sizes">
-    <button role="listitem">S</button>
-    <button role="listitem">M</button>
-    <button role="listitem">L</button>
-    <button role="listitem">XL</button>
-    <button role="listitem">XXL</button>
-  </div>
-
-  <button class="sold-out-btn">ADD TO CART</button>
-</main>
-
-<footer>
-  &copy; 2025 Matt Scianna
-</footer>
+<nav id="sidebar" class="sidebar">
+  <p>Sidebar content goes here.</p>
+</nav>
 
 <script>
-  // Sidebar toggle
   const menuToggle = document.getElementById('menuToggle');
-  const sidebar = document.querySelector('.sidebar');
-  const body = document.body;
+  const sidebar = document.getElementById('sidebar');
+  const logoContainer = document.getElementById('logoContainer');
+  const logoText = document.getElementById('logoText');
+  const logoImage = document.getElementById('logoImage');
+  const slider = document.getElementById('slider');
 
+  let currentIndex = 0;
+  const slides = slider.children;
+  const totalSlides = slides.length;
+
+  function updateSlide(index) {
+    slider.style.transform = `translateX(-${index * 100}%)`;
+  }
+
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % totalSlides;
+    updateSlide(currentIndex);
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
+    updateSlide(currentIndex);
+  }
+
+  setInterval(nextSlide, 10000);
+
+  let scrollPosition = 0;
   menuToggle.addEventListener('click', () => {
-    menuToggle.classList.toggle('open');
-    sidebar.classList.toggle('open');
-    body.classList.toggle('sidebar-open');
-  });
+    const isOpen = menuToggle.classList.toggle('open');
+    sidebar.classList.toggle('open', isOpen);
 
-  menuToggle.addEventListener('keypress', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      menuToggle.click();
+    if (isOpen) {
+      scrollPosition = window.scrollY;
+      document.body.classList.add('sidebar-open');
+      document.body.style.top = `-${scrollPosition}px`;
+    } else {
+      document.body.classList.remove('sidebar-open');
+      document.body.style.top = '';
+      window.scrollTo(0, scrollPosition);
     }
   });
 
-  // Logo click
-  const logoContainer = document.getElementById('logoContainer');
   logoContainer.addEventListener('click', () => {
-    window.location.href = 'https://mattscianna.com/website/';
+    window.scrollTo(0, 0);
+    location.reload();
   });
 
-  logoContainer.addEventListener('keypress', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      window.location.href = 'https://mattscianna.com/website/';
+  ['menuToggle', 'logoContainer'].forEach(id => {
+    const el = document.getElementById(id);
+    el.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') el.click();
+    });
+  });
+
+  // Scroll-based logo switching
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 40) {
+      logoText.style.display = 'none';
+      logoImage.style.display = 'block';
+    } else {
+      logoText.style.display = 'block';
+      logoImage.style.display = 'none';
     }
   });
 </script>
-
 </body>
 </html>
