--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,6 @@
       background-color: white;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
-      transition: background-color 0.3s ease;
     }
 
     .menu-icon {
@@ -78,7 +77,7 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      top: 48%;
+      top: 50%;
       transform: translate(-50%, -50%);
       display: flex;
       align-items: center;
@@ -96,6 +95,7 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
+      margin-top: 4px; /* Adjusted lower */
     }
 
     .logo-image {
@@ -106,7 +106,7 @@
     .cart-icon-container {
       display: flex;
       align-items: flex-start;
-      margin-top: -2px;
+      margin-top: -6px; /* Raised slightly */
       height: 22px;
       cursor: pointer;
     }
@@ -268,9 +268,9 @@
 <script>
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.getElementById('sidebar');
-  const logoContainer = document.getElementById('logoContainer');
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
+  const logoContainer = document.getElementById('logoContainer');
   const slider = document.getElementById('slider');
 
   let currentIndex = 0;
@@ -294,6 +294,26 @@
   setInterval(nextSlide, 10000);
 
   let scrollPosition = 0;
+  let currentLogoState = 'text';
+
+  function updateLogoVisibility() {
+    if (window.scrollY > 40) {
+      logoText.style.display = 'none';
+      logoImage.style.display = 'block';
+      currentLogoState = 'image';
+    } else {
+      logoText.style.display = 'block';
+      logoImage.style.display = 'none';
+      currentLogoState = 'text';
+    }
+  }
+
+  window.addEventListener('scroll', () => {
+    if (!document.body.classList.contains('sidebar-open')) {
+      updateLogoVisibility();
+    }
+  });
+
   menuToggle.addEventListener('click', () => {
     const isOpen = menuToggle.classList.toggle('open');
     sidebar.classList.toggle('open', isOpen);
@@ -302,16 +322,29 @@
       scrollPosition = window.scrollY;
       document.body.classList.add('sidebar-open');
       document.body.style.top = `-${scrollPosition}px`;
+      document.body.style.position = 'fixed';
+      document.body.style.width = '100%';
+
+      // Maintain logo state
+      if (currentLogoState === 'text') {
+        logoText.style.display = 'block';
+        logoImage.style.display = 'none';
+      } else {
+        logoText.style.display = 'none';
+        logoImage.style.display = 'block';
+      }
     } else {
       document.body.classList.remove('sidebar-open');
+      document.body.style.position = '';
       document.body.style.top = '';
+      document.body.style.width = '';
       window.scrollTo(0, scrollPosition);
+      updateLogoVisibility();
     }
   });
 
   logoContainer.addEventListener('click', () => {
-    window.scrollTo(0, 0);
-    location.reload();
+    window.scrollTo({ top: 0, behavior: 'smooth' });
   });
 
   ['menuToggle', 'logoContainer'].forEach(id => {
@@ -321,16 +354,7 @@
     });
   });
 
-  // Scroll-based logo switching
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 40) {
-      logoText.style.display = 'none';
-      logoImage.style.display = 'block';
-    } else {
-      logoText.style.display = 'block';
-      logoImage.style.display = 'none';
-    }
-  });
+  document.addEventListener('DOMContentLoaded', updateLogoVisibility);
 </script>
 </body>
 </html>
