--- a/website/index.html
+++ b/website/index.html
@@ -94,11 +94,11 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
-      margin-top: 6px; /* Slightly lowered */
+      margin-top: 2px; /* Raised text higher */
     }
 
     .logo-image {
-      height: 56px; /* Made the MS logo larger */
+      height: 72px; /* Enlarged MS logo */
       display: none;
     }
 
