--- a/website/index.html
+++ b/website/index.html
@@ -94,24 +94,24 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
-      margin-top: 2px; /* Raised text higher */
+      margin-top: 0px; /* Raised text a tiny bit higher */
     }
 
     .logo-image {
-      height: 72px; /* Enlarged MS logo */
+      height: 80px; /* Made MS logo bigger */
       display: none;
     }
 
     .cart-icon-container {
       display: flex;
-      align-items: flex-start;
-      margin-top: -6px;
-      height: 22px;
+      align-items: flex-end; /* Lower it slightly */
+      height: 26px;
+      margin-top: 2px;
       cursor: pointer;
     }
 
     .cart-icon {
-      height: 22px;
+      height: 26px; /* Slightly bigger shopping bag */
     }
 
     .image-box {
