--- a/website/index.html
+++ b/website/index.html
@@ -94,24 +94,24 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
-      margin-top: 0px; /* Raised text a tiny bit higher */
+      margin-top: 0px;
     }
 
     .logo-image {
-      height: 80px; /* Made MS logo bigger */
+      height: 80px;
       display: none;
     }
 
     .cart-icon-container {
       display: flex;
-      align-items: flex-end; /* Lower it slightly */
+      align-items: flex-start; /* Lift higher */
       height: 26px;
-      margin-top: 2px;
+      margin-top: -2px; /* Lift higher */
       cursor: pointer;
     }
 
     .cart-icon {
-      height: 26px; /* Slightly bigger shopping bag */
+      height: 26px;
     }
 
     .image-box {
