--- a/website/index.html
+++ b/website/index.html
@@ -102,6 +102,7 @@
       display: none;
     }
 
+    /* Adjusted cart icon container */
     .cart-icon-container {
       display: flex;
       align-items: flex-start; /* Lift higher */
