--- a/website/index.html
+++ b/website/index.html
@@ -105,9 +105,9 @@
     /* Adjusted cart icon container */
     .cart-icon-container {
       display: flex;
-      align-items: flex-start; /* Lift higher */
+      align-items: flex-start;
       height: 26px;
-      margin-top: -2px; /* Lift higher */
+      margin-top: -4px; /* Lifted a tiny bit more */
       cursor: pointer;
     }
 
