--- a/website/index.html
+++ b/website/index.html
@@ -94,7 +94,7 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
-      margin-top: 0px;
+      margin-top: 2px; /* slightly lowered */
     }
 
     .logo-image {
@@ -102,12 +102,11 @@
       display: none;
     }
 
-    /* Adjusted cart icon container */
     .cart-icon-container {
       display: flex;
       align-items: flex-start;
       height: 26px;
-      margin-top: -4px; /* Lifted a tiny bit more */
+      margin-top: -4px;
       cursor: pointer;
     }
 
