--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
       user-select: none;
     }
 
-    body.sidebar-open {
+    body.sidebar-open, body.cart-open {
       overflow: hidden;
       position: fixed;
       width: 100%;
@@ -40,12 +40,15 @@
       border-bottom: 1px solid #ccc;
     }
 
+    .menu-icon, .cart-icon-container {
+      cursor: pointer;
+    }
+
     .menu-icon {
       width: 22px;
       height: 16px;
       margin-top: -2px;
       position: relative;
-      cursor: pointer;
     }
 
     .menu-icon div {
@@ -107,11 +110,15 @@
       align-items: flex-start;
       height: 26px;
       margin-top: -2px;
-      cursor: pointer;
     }
 
     .cart-icon {
       height: 26px;
+      transition: transform 0.3s ease;
+    }
+
+    .cart-icon-container.open .cart-icon {
+      transform: rotate(45deg);
     }
 
     .image-box {
@@ -159,30 +166,41 @@
       transform: translateY(-50%) rotate(-45deg);
     }
 
-    /* Sidebar width changed to less than half (40%) */
-    .sidebar {
+    .sidebar, .cart-sidebar {
       position: fixed;
       top: 0;
-      left: 0;
-      width: 40vw;
-      max-width: 400px;
-      height: 100vh;
       background: white;
       font-family: 'Oswald', sans-serif;
       font-weight: 400;
       font-size: 24px;
-      padding: 80px 20px;
-      transform: translateX(-100%);
       transition: transform 0.4s ease-in-out;
       z-index: 1100;
       overflow-y: auto;
-      overflow-x: hidden;
       -webkit-overflow-scrolling: touch;
-      touch-action: auto;
-      box-shadow: 2px 0 8px rgba(0,0,0,0.15);
+    }
+
+    .sidebar {
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      padding: 80px 20px;
+      transform: translateX(-100%);
     }
 
     .sidebar.open {
+      transform: translateX(0);
+    }
+
+    .cart-sidebar {
+      right: 0;
+      width: 45vw;
+      max-width: 340px;
+      height: 100vh;
+      padding: 80px 20px;
+      transform: translateX(100%);
+    }
+
+    .cart-sidebar.open {
       transform: translateX(0);
     }
 
@@ -264,7 +282,11 @@
 </div>
 
 <nav id="sidebar" class="sidebar">
-  <p>Sidebar content goes here.</p>
+  <p>Menu sidebar content goes here.</p>
+</nav>
+
+<nav id="cartSidebar" class="cart-sidebar">
+  <p>Cart sidebar content goes here.</p>
 </nav>
 
 <script>
@@ -273,9 +295,12 @@
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
   const logoContainer = document.getElementById('logoContainer');
-  const slider = document.getElementById('slider');
   const cartIcon = document.getElementById('cartIcon');
+  const cartSidebar = document.getElementById('cartSidebar');
+  const slider = document.getElementById('slider');
 
+  let scrollPosition = 0;
+  let currentLogoState = 'text';
   let currentIndex = 0;
   const slides = slider.children;
   const totalSlides = slides.length;
@@ -296,9 +321,6 @@
 
   setInterval(nextSlide, 10000);
 
-  let scrollPosition = 0;
-  let currentLogoState = 'text';
-
   function updateLogoVisibility() {
     if (window.scrollY > 40) {
       logoText.style.display = 'none';
@@ -312,7 +334,7 @@
   }
 
   window.addEventListener('scroll', () => {
-    if (!document.body.classList.contains('sidebar-open')) {
+    if (!document.body.classList.contains('sidebar-open') && !document.body.classList.contains('cart-open')) {
       updateLogoVisibility();
     }
   });
@@ -321,12 +343,17 @@
     const isOpen = menuToggle.classList.toggle('open');
     sidebar.classList.toggle('open', isOpen);
 
+    if (cartSidebar.classList.contains('open')) {
+      cartSidebar.classList.remove('open');
+      cartIcon.classList.remove('open');
+      document.body.classList.remove('cart-open');
+    }
+
     if (isOpen) {
       scrollPosition = window.scrollY;
       document.body.classList.add('sidebar-open');
       document.body.style.top = `-${scrollPosition}px`;
       document.body.style.position = 'fixed';
-      document.body.style.width = '100%';
 
       if (currentLogoState === 'text') {
         logoText.style.display = 'block';
@@ -339,44 +366,36 @@
       document.body.classList.remove('sidebar-open');
       document.body.style.position = '';
       document.body.style.top = '';
-      document.body.style.width = '';
       window.scrollTo(0, scrollPosition);
       updateLogoVisibility();
     }
   });
 
-  // Change logo click to reload main page (no smooth scroll)
-  logoContainer.addEventListener('click', () => {
-    window.location.href = '/'; // Adjust if your main homepage URL is different
-  });
-
-  // Make cart icon toggle sidebar
   cartIcon.addEventListener('click', () => {
-    const isOpen = sidebar.classList.toggle('open');
-    menuToggle.classList.toggle('open', isOpen);
+    const isOpen = cartSidebar.classList.toggle('open');
+    cartIcon.classList.toggle('open', isOpen);
+
+    if (sidebar.classList.contains('open')) {
+      sidebar.classList.remove('open');
+      menuToggle.classList.remove('open');
+      document.body.classList.remove('sidebar-open');
+    }
 
     if (isOpen) {
       scrollPosition = window.scrollY;
-      document.body.classList.add('sidebar-open');
+      document.body.classList.add('cart-open');
       document.body.style.top = `-${scrollPosition}px`;
       document.body.style.position = 'fixed';
-      document.body.style.width = '100%';
-
-      if (currentLogoState === 'text') {
-        logoText.style.display = 'block';
-        logoImage.style.display = 'none';
-      } else {
-        logoText.style.display = 'none';
-        logoImage.style.display = 'block';
-      }
     } else {
-      document.body.classList.remove('sidebar-open');
+      document.body.classList.remove('cart-open');
       document.body.style.position = '';
       document.body.style.top = '';
-      document.body.style.width = '';
       window.scrollTo(0, scrollPosition);
-      updateLogoVisibility();
     }
+  });
+
+  logoContainer.addEventListener('click', () => {
+    window.location.href = '/';
   });
 
   ['menuToggle', 'logoContainer', 'cartIcon'].forEach(id => {
