--- a/website/index.html
+++ b/website/index.html
@@ -107,6 +107,7 @@
       height: 26px;
       width: 26px;
       position: relative;
+      margin-top: -2px; /* 👈 This line moves the bag icon higher */
     }
 
     .cart-icon, .cart-x-icon {
