--- a/website/index.html
+++ b/website/index.html
@@ -36,7 +36,7 @@
       border-bottom: 1px solid #ccc;
     }
 
-    .menu-icon, .cart-icon-x {
+    .menu-icon, .cart-icon {
       width: 22px;
       height: 16px;
       position: relative;
@@ -45,7 +45,7 @@
       align-items: center;
     }
 
-    .menu-icon div, .cart-icon-x div {
+    .menu-icon div, .cart-icon div {
       position: absolute;
       width: 100%;
       height: 2px;
@@ -53,19 +53,27 @@
       transition: all 0.4s ease;
     }
 
-    .menu-icon div:nth-child(1), .cart-icon-x div:nth-child(1) { top: 0; }
-    .menu-icon div:nth-child(2), .cart-icon-x div:nth-child(2) { top: 7px; }
-    .menu-icon div:nth-child(3), .cart-icon-x div:nth-child(3) { top: 14px; }
+    .menu-icon div:nth-child(1),
+    .cart-icon div:nth-child(1) { top: 0; }
 
-    .menu-icon.open div:nth-child(1), .cart-icon-x.open div:nth-child(1) {
+    .menu-icon div:nth-child(2),
+    .cart-icon div:nth-child(2) { top: 7px; }
+
+    .menu-icon div:nth-child(3),
+    .cart-icon div:nth-child(3) { top: 14px; }
+
+    .menu-icon.open div:nth-child(1),
+    .cart-icon.open div:nth-child(1) {
       transform: rotate(45deg); top: 7px;
     }
 
-    .menu-icon.open div:nth-child(2), .cart-icon-x.open div:nth-child(2) {
+    .menu-icon.open div:nth-child(2),
+    .cart-icon.open div:nth-child(2) {
       opacity: 0;
     }
 
-    .menu-icon.open div:nth-child(3), .cart-icon-x.open div:nth-child(3) {
+    .menu-icon.open div:nth-child(3),
+    .cart-icon.open div:nth-child(3) {
       transform: rotate(-45deg); top: 7px;
     }
 
@@ -82,23 +90,15 @@
 
     .logo-text {
       font-family: 'Cardo', serif;
-      font-size: 26px;
+      font-size: 25px;
       font-weight: 900;
       line-height: 1;
       white-space: nowrap;
-      margin-top: 2px;
     }
 
     .logo-image {
-      height: 88px;
+      height: 90px;
       display: none;
-    }
-
-    .cart-icon-container {
-      display: flex;
-      align-items: center;
-      margin-top: -4px;
-      height: 26px;
     }
 
     .image-box {
@@ -221,7 +221,7 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" />
   </div>
 
-  <div id="cartIcon" class="cart-icon-x" title="Cart">
+  <div id="cartToggle" class="cart-icon" role="button" tabindex="0" title="Cart">
     <div></div><div></div><div></div>
   </div>
 </header>
@@ -257,8 +257,8 @@
 
 <script>
   const menuToggle = document.getElementById('menuToggle');
+  const cartToggle = document.getElementById('cartToggle');
   const sidebar = document.getElementById('sidebar');
-  const cartIcon = document.getElementById('cartIcon');
   const cartSidebar = document.getElementById('cartSidebar');
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
@@ -310,7 +310,7 @@
 
     if (cartSidebar.classList.contains('open')) {
       cartSidebar.classList.remove('open');
-      cartIcon.classList.remove('open');
+      cartToggle.classList.remove('open');
       document.body.classList.remove('cart-open');
     }
 
@@ -327,9 +327,9 @@
     }
   });
 
-  cartIcon.addEventListener('click', () => {
+  cartToggle.addEventListener('click', () => {
     const isOpen = cartSidebar.classList.toggle('open');
-    cartIcon.classList.toggle('open', isOpen);
+    cartToggle.classList.toggle('open', isOpen);
 
     if (sidebar.classList.contains('open')) {
       sidebar.classList.remove('open');
@@ -351,12 +351,11 @@
   });
 
   logoContainer.addEventListener('click', () => {
-    logoText.style.display = 'block';
-    logoImage.style.display = 'none';
+    window.location.href = '/';
     window.location.reload();
   });
 
-  ['menuToggle', 'logoContainer', 'cartIcon'].forEach(id => {
+  ['menuToggle', 'logoContainer', 'cartToggle'].forEach(id => {
     document.getElementById(id).addEventListener('keydown', (e) => {
       if (e.key === 'Enter') e.target.click();
     });
